--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">TabsContainerDemo</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_reset">Reset</string>
     <string name="section_format">Hello World from section %1$d %2$s</string>
 </resources>
